<resources>
    <string name="app_name">hyperbid_android_demo</string>
    <string name="already_init_title">Warning</string>
    <string name="already_init_message">"HyperBid was already initialized!"</string>
    <string name="gdpr_personalized">personalized</string>
    <string name="gdpr_nonpersonalized">non personalized</string>


    <string name="hyperbid_sdk_demo">HyperBid Sdk Demo</string>

    <string name="hyperbid_title_rewarded_video">Rewarded Video</string>
    <string name="hyperbid_title_interstitial">Interstitial</string>
    <string name="hyperbid_title_splash">Splash</string>
    <string name="hyperbid_title_banner">Banner</string>
    <string name="hyperbid_title_native">Native</string>

    <string name="hyperbid_title_fullscreen">FullScreen</string>
    <string name="hyperbid_title_draw">Draw</string>
    <string name="hyperbid_title_patch">Patch</string>

    <string name="hyperbid_main_desc_rewarded_video">Users can engage with a video ad in exchange for in-app rewards.</string>
    <string name="hyperbid_main_desc_interstitial">Include Interstitial and FullScreen.Appears at natural breaks or transition points.</string>
    <string name="hyperbid_main_desc_splash">Displayed immediately after the application is launched.</string>
    <string name="hyperbid_main_desc_banner">Flexible formats which could appear at the top, middle or bottom of your app.</string>
    <string name="hyperbid_main_desc_native">Include Native,Vertical Draw Video and Pre-roll Ads.Most compatible with your native app code for video ads and graphic ads.</string>

    <string name="hyperbid_load_ad">Load Ad</string>
    <string name="hyperbid_is_ad_ready">Is Ad Ready</string>
    <string name="hyperbid_show_ad">Show Ad</string>
    <string name="hyperbid_select_network">Select Network</string>

    <string name="hyperbid_click_to_copy_device_id">Copy AndroidID: %s</string>
    <string name="hyperbid_sdk_version">TopOn SDK: %s</string>

</resources>