<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2018-2020 HyperBid. All rights reserved.
  ~ https://www.HyperBidad.com
  ~ Licensed under the HyperBid SDK License Agreement
  ~ https://github.com/HyperBidteam/HyperBid-Android-SDK/blob/master/LICENSE
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_sdk_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        android:padding="@dimen/hyperbid_padding">


        <TextView
            android:id="@+id/tv_sdk_demo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/hyperbid_sdk_demo"
            android:textColor="@color/white"
            android:textSize="17dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/hyperbid_F5F5F5"
        android:paddingTop="@dimen/hyperbid_21dp"
        android:paddingBottom="@dimen/hyperbid_21dp">

        <TextView
            android:id="@+id/tv_device_id"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_btn_device_id"
            android:gravity="center"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/hyperbid_click_to_copy_device_id"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_device_id"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/hyperbid_7dp"
            android:gravity="center"
            android:text="@string/hyperbid_sdk_version"
            android:textColor="@color/hyperbid_A9A9A9"
            android:textSize="@dimen/hyperbid_11dp" />

    </RelativeLayout>


    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rl_bottom"
        android:layout_below="@id/rl_sdk_title"
        android:background="@color/hyperbid_F5F5F5"
        android:padding="@dimen/hyperbid_padding"
        android:visibility="gone">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
    >

            <RelativeLayout
                android:id="@+id/rewardedVideoBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white"
                android:padding="@dimen/hyperbid_10dp">

                <LinearLayout
                    android:id="@+id/ll_rewarded_video"
                    android:layout_width="@dimen/hyperbid_pic_size"
                    android:layout_height="@dimen/hyperbid_pic_size"
                    android:background="@drawable/shape_gray_width1_corners2"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_rewarded_video"
                        android:layout_width="99dp"
                        android:layout_height="99dp"
                        android:scaleType="fitXY"
                        android:src="@mipmap/iv_rewarded_video" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_title_rewarded_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/hyperbid_title_margin_left"
                    android:layout_marginTop="@dimen/hyperbid_title_margin_top"
                    android:layout_toRightOf="@id/ll_rewarded_video"
                    android:text="@string/hyperbid_title_rewarded_video"
                    android:textColor="@color/black"
                    android:textSize="@dimen/hyperbid_title_size" />

                <TextView
                    android:id="@+id/tv_desc_rewarded_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_title_rewarded_video"
                    android:layout_alignLeft="@id/tv_title_rewarded_video"
                    android:layout_marginTop="@dimen/hyperbid_desc_margin_top"
                    android:maxLines="3"
                    android:text="@string/hyperbid_main_desc_rewarded_video"
                    android:textColor="@color/hyperbid_666666"
                    android:textSize="@dimen/hyperbid_desc_size" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/interstitialBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/hyperbid_10dp"
                android:background="@drawable/bg_white"
                android:padding="@dimen/hyperbid_8dp">

                <LinearLayout
                    android:id="@+id/ll_interstitial"
                    android:layout_width="@dimen/hyperbid_pic_size"
                    android:layout_height="@dimen/hyperbid_pic_size"
                    android:background="@drawable/shape_gray_width1_corners2"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_interstitial"
                        android:layout_width="99dp"
                        android:layout_height="99dp"
                        android:src="@mipmap/ic_test_interstitial" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_title_interstitial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/hyperbid_title_margin_left"
                    android:layout_marginTop="@dimen/hyperbid_title_margin_top"
                    android:layout_toRightOf="@id/ll_interstitial"
                    android:text="@string/hyperbid_title_interstitial"
                    android:textColor="@color/black"
                    android:textSize="@dimen/hyperbid_title_size" />

                <TextView
                    android:id="@+id/tv_desc_interstitial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_title_interstitial"
                    android:layout_alignLeft="@id/tv_title_interstitial"
                    android:layout_marginTop="@dimen/hyperbid_desc_margin_top"
                    android:maxLines="3"
                    android:text="@string/hyperbid_main_desc_interstitial"
                    android:textColor="@color/hyperbid_666666"
                    android:textSize="@dimen/hyperbid_desc_size" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/splashBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/hyperbid_10dp"
                android:background="@drawable/bg_white"
                android:padding="@dimen/hyperbid_8dp">

                <LinearLayout
                    android:id="@+id/ll_splash"
                    android:layout_width="@dimen/hyperbid_pic_size"
                    android:layout_height="@dimen/hyperbid_pic_size"
                    android:background="@drawable/shape_gray_width1_corners2"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_splash"
                        android:layout_width="99dp"
                        android:layout_height="99dp"
                        android:src="@mipmap/ic_test_splash" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_title_splash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/hyperbid_title_margin_left"
                    android:layout_marginTop="@dimen/hyperbid_title_margin_top"
                    android:layout_toRightOf="@id/ll_splash"
                    android:text="@string/hyperbid_title_splash"
                    android:textColor="@color/black"
                    android:textSize="@dimen/hyperbid_title_size" />

                <TextView
                    android:id="@+id/tv_desc_splash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_title_splash"
                    android:layout_alignLeft="@id/tv_title_splash"
                    android:layout_marginTop="@dimen/hyperbid_desc_margin_top"
                    android:maxLines="3"
                    android:text="@string/hyperbid_main_desc_splash"
                    android:textColor="@color/hyperbid_666666"
                    android:textSize="@dimen/hyperbid_desc_size" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/bannerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/hyperbid_10dp"
                android:background="@drawable/bg_white"
                android:padding="@dimen/hyperbid_8dp">

                <LinearLayout
                    android:id="@+id/ll_banner"
                    android:layout_width="@dimen/hyperbid_pic_size"
                    android:layout_height="@dimen/hyperbid_pic_size"
                    android:background="@drawable/shape_gray_width1_corners2"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_banner"
                        android:layout_width="99dp"
                        android:layout_height="99dp"
                        android:scaleType="fitXY"
                        android:src="@mipmap/ic_test_banner" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_title_banner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/hyperbid_title_margin_left"
                    android:layout_marginTop="@dimen/hyperbid_title_margin_top"
                    android:layout_toRightOf="@id/ll_banner"
                    android:text="@string/hyperbid_title_banner"
                    android:textColor="@color/black"
                    android:textSize="@dimen/hyperbid_title_size" />

                <TextView
                    android:id="@+id/tv_desc_banner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_title_banner"
                    android:layout_alignLeft="@id/tv_title_banner"
                    android:layout_marginTop="@dimen/hyperbid_desc_margin_top"
                    android:maxLines="3"
                    android:text="@string/hyperbid_main_desc_banner"
                    android:textColor="@color/hyperbid_666666"
                    android:textSize="@dimen/hyperbid_desc_size" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/nativeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/hyperbid_10dp"
                android:background="@drawable/bg_white"
                android:padding="@dimen/hyperbid_8dp">

                <LinearLayout
                    android:id="@+id/ll_native"
                    android:layout_width="@dimen/hyperbid_pic_size"
                    android:layout_height="@dimen/hyperbid_pic_size"
                    android:background="@drawable/shape_gray_width1_corners2"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_native"
                        android:layout_width="99dp"
                        android:layout_height="99dp"
                        android:src="@mipmap/ic_test_native" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_title_native"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/hyperbid_title_margin_left"
                    android:layout_marginTop="@dimen/hyperbid_title_margin_top"
                    android:layout_toRightOf="@id/ll_native"
                    android:text="@string/hyperbid_title_native"
                    android:textColor="@color/black"
                    android:textSize="@dimen/hyperbid_title_size" />

                <TextView
                    android:id="@+id/tv_desc_native"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_title_native"
                    android:layout_alignLeft="@id/tv_title_native"
                    android:layout_marginTop="@dimen/hyperbid_desc_margin_top"
                    android:maxLines="3"
                    android:text="@string/hyperbid_main_desc_native"
                    android:textColor="@color/hyperbid_666666"
                    android:textSize="@dimen/hyperbid_desc_size" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <ListView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rl_bottom"
        android:layout_below="@id/rl_sdk_title"
        android:background="@color/hyperbid_F5F5F5" />
</RelativeLayout>